# wasm-obs-agent

./: Cargo.toml  LICENSE  docker-compose.yml
examples/: auto_instrument.rs  demo.rs
src/: exporter.rs  instrument.rs  lib.rs  wrapper.rs
