[package]
name = "wasm-obs-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Biblioteca wasmtime oficial (la usas, no la modificas)
wasmtime = "20.0"

# Para telemetría async
tokio = { version = "1.35", features = ["full"] }

# Para exportar a OpenTelemetry
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16.0", features = ["http-proto", "trace", "reqwest-client"] }
env_logger = "0.11"
log = "0.4"

# Para serializar datos
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Para IDs únicos
uuid = { version = "1.8", features = ["v4", "serde"] }

# Para comunicación entre threads
crossbeam-channel = "0.5"

# Para locks eficientes
parking_lot = "0.12"

[dev-dependencies]
wat = "1.243.0"
